@@ -2,7 +2,9 @@ package p.lodz.pl.backend.fuzzy.summary;
 
 import p.lodz.pl.backend.fuzzy.linguistic.LinguisticLabel;
 import p.lodz.pl.backend.fuzzy.quantifier.Quantifier;
+import p.lodz.pl.backend.fuzzy.set.FuzzySet;
 import p.lodz.pl.backend.fuzzy.util.Combiner;
+import p.lodz.pl.backend.fuzzy.util.Operation;
 import p.lodz.pl.backend.fuzzy.util.Pair;
 
 import java.util.ArrayList;
@@ -54,6 +56,7 @@ public class MultiSubjectLinguisticSummary<R> extends AbstractLinguisticSummary 
             stringBuilder.append(quantifier.getLabelName()).append(SPACE)
                     .append(subject1).append(COMPARED).append(subject2).append(HAVE);
             int index = 0;
+            List<FuzzySet<R>> sum = new ArrayList<>();
             for (int i : combination) {
                 stringBuilder.append(qualifiers.get(i).getLabelName()).append(SPACE)
                         .append(qualifiers.get(i).getLinguisticVariableName());
@@ -61,8 +64,9 @@ public class MultiSubjectLinguisticSummary<R> extends AbstractLinguisticSummary 
                 if (index < combination.size()) {
                     stringBuilder.append(AND);
                 }
+                sum.add(qualifiers.get(i));
                 summaries.add(new Summary(form, stringBuilder.toString(),
-                        getQualityForSummary()));
+                        getQualityForSummary(form, Collections.emptyList(), sum)));
             }
         }
     }
@@ -77,6 +81,7 @@ public class MultiSubjectLinguisticSummary<R> extends AbstractLinguisticSummary 
             stringBuilder.append(quantifier.getLabelName()).append(SPACE)
                     .append(subject1).append(COMPARED).append(subject2).append(THAT);
             int index = 0;
+            List<FuzzySet<R>> qua = new ArrayList<>();
             for (int i : combination.getFirst()) {
                 stringBuilder.append(qualifiers.get(i).getLabelName()).append(SPACE)
                         .append(qualifiers.get(i).getLinguisticVariableName());
@@ -84,9 +89,11 @@ public class MultiSubjectLinguisticSummary<R> extends AbstractLinguisticSummary 
                 if (index < combination.getFirst().size()) {
                     stringBuilder.append(AND);
                 }
+                qua.add(qualifiers.get(i));
             }
             stringBuilder.append(ALSO);
             index = 0;
+            List<FuzzySet<R>> sum = new ArrayList<>();
             for (int i : combination.getSecond()) {
                 stringBuilder.append(qualifiers.get(i).getLabelName()).append(SPACE)
                         .append(qualifiers.get(i).getLinguisticVariableName());
@@ -94,10 +101,11 @@ public class MultiSubjectLinguisticSummary<R> extends AbstractLinguisticSummary 
                 if (index < combination.getSecond().size()) {
                     stringBuilder.append(AND);
                 }
+                sum.add(qualifiers.get(i));
             }
 
             summaries.add(new Summary(form, stringBuilder.toString(),
-                    getQualityForSummary()));
+                    getQualityForSummary(form, qua, sum)));
         }
     }
 
@@ -111,6 +119,7 @@ public class MultiSubjectLinguisticSummary<R> extends AbstractLinguisticSummary 
             stringBuilder.append(quantifier.getLabelName()).append(SPACE)
                     .append(subject1).append(THAT);
             int index = 0;
+            List<FuzzySet<R>> qua = new ArrayList<>();
             for (int i : combination.getFirst()) {
                 stringBuilder.append(qualifiers.get(i).getLabelName()).append(SPACE)
                         .append(qualifiers.get(i).getLinguisticVariableName());
@@ -118,9 +127,11 @@ public class MultiSubjectLinguisticSummary<R> extends AbstractLinguisticSummary 
                 if (index < combination.getFirst().size()) {
                     stringBuilder.append(AND);
                 }
+                qua.add(qualifiers.get(i));
             }
             stringBuilder.append(COMPARED).append(subject2).append(ALSO);
             index = 0;
+            List<FuzzySet<R>> sum = new ArrayList<>();
             for (int i : combination.getSecond()) {
                 stringBuilder.append(qualifiers.get(i).getLabelName()).append(SPACE)
                         .append(qualifiers.get(i).getLinguisticVariableName());
@@ -128,10 +139,11 @@ public class MultiSubjectLinguisticSummary<R> extends AbstractLinguisticSummary 
                 if (index < combination.getSecond().size()) {
                     stringBuilder.append(AND);
                 }
+                sum.add(qualifiers.get(i));
             }
 
             summaries.add(new Summary(form, stringBuilder.toString(),
-                    getQualityForSummary()));
+                    getQualityForSummary(form, qua, sum)));
         }
     }
 
@@ -145,6 +157,7 @@ public class MultiSubjectLinguisticSummary<R> extends AbstractLinguisticSummary 
             stringBuilder.append(THERE).append(subject1)
                     .append(THAN).append(subject2).append(THAT);
             int index = 0;
+            List<FuzzySet<R>> sum = new ArrayList<>();
             for (int i : combination) {
                 stringBuilder.append(qualifiers.get(i).getLabelName()).append(SPACE)
                         .append(qualifiers.get(i).getLinguisticVariableName());
@@ -152,17 +165,61 @@ public class MultiSubjectLinguisticSummary<R> extends AbstractLinguisticSummary 
                 if (index < combination.size()) {
                     stringBuilder.append(AND);
                 }
-                summaries.add(new Summary(form, stringBuilder.toString(),
-                        getQualityForSummary()));
+                sum.add(qualifiers.get(i));
             }
+            summaries.add(new Summary(form, stringBuilder.toString(),
+                    getQualityForSummary(form, Collections.emptyList(), sum)));
         }
     }
 
-    private List<Double> getQualityForSummary() {
-        return Collections.emptyList();
+    private List<Double> getQualityForSummary(int form,
+                                              List<FuzzySet<R>> qualifierSet,
+                                              List<FuzzySet<R>> summarizerSet) {
+        if (form == 1) {
+            return List.of(degreeOfTruthForFirstForm(summarizerSet));
+        } else if (form == 2) {
+            return List.of(degreeOfTruthForSecondForm(qualifierSet, summarizerSet));
+        } else if (form == 3) {
+            return List.of(degreeOfTruthForThirdForm(qualifierSet, summarizerSet));
+        } else if (form == 4) {
+            return List.of(degreeOfTruthForFourthForm(summarizerSet));
+        } else {
+            throw new IllegalArgumentException("Form " + form + " is not supported");
+        }
     }
 
-    private double degreeOfTruth(int form) {
-        return 0.0;
+    private double degreeOfTruthForFirstForm(List<FuzzySet<R>> summarizers) {
+        Operation<FuzzySet<R>> operation = new Operation<>();
+        FuzzySet<R> s = summarizers.get(0);
+        for (FuzzySet<R> qualifier : summarizers) {
+            s = operation.and(s, qualifier);
+        }
+        double nominator = 1.0 / firstGroup.size() * firstGroup.stream()
+                .mapToDouble(s::getMemberShip)
+                .sum();
+        double denominator = 1.0 / firstGroup.size() * firstGroup.stream()
+                .mapToDouble(s::getMemberShip)
+                .sum() + 1.0 / secondGroup.size() * secondGroup.stream()
+                .mapToDouble(s::getMemberShip)
+                .sum();
+        return quantifier.getMemberShip(nominator / denominator);
+    }
+
+    private double degreeOfTruthForSecondForm(List<FuzzySet<R>> qualifierSet,
+                                              List<FuzzySet<R>> summarizerSet) {
+        double nominator = 0.0;
+        double denominator = 0.0;
+        return quantifier.getMemberShip(0);
+    }
+
+    private double degreeOfTruthForThirdForm(List<FuzzySet<R>> qualifierSet,
+                                             List<FuzzySet<R>> summarizerSet) {
+        double nominator = 0.0;
+        double denominator = 0.0;
+        return quantifier.getMemberShip(0);
+    }
+
+    private double degreeOfTruthForFourthForm(List<FuzzySet<R>> summarizerSet) {
+        return 1.0 - 0;
     }
 }
